# cooperalivros-pelotas

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ATIVIDADE_EXTENSIONISTA.md  AUTHENTICATION_GUIDE.md  Dockerfile  FRONTEND_README.md  QUICKSTART.md  README.md  UPDATES.md  architecture_diagram.html  conftest.py  coverage.xml  docker-compose.yml  livros_massa_dados.txt  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
books/: admin.py  models.py  serializers.py  views.py
books/migrations/: 0001_initial.py  0002_book_cover_image.py
books/repositories/: __init__.py  book_repository.py
books/tests/integration/: test_views.py
books/tests/unit/: test_file_processors.py  test_models.py  test_repository.py  test_serializers.py
books/utils/: __init__.py  file_processors.py
config/: settings.py  urls.py
examples/: README.md  api_client_example.py  books_example.txt  books_example.xlsx  users_example.txt  users_example.xlsx
frontend/: urls.py  views.py
loans/: admin.py  models.py  serializers.py  views.py
loans/migrations/: 0001_initial.py
loans/repositories/: __init__.py  loan_repository.py
loans/tests/integration/: test_views.py
loans/tests/unit/: test_models.py  test_repository.py  test_serializers.py
templates/: add_book.html  base.html  index.html  login.html
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
users/repositories/: __init__.py  user_repository.py
users/utils/: __init__.py  file_processors.py
web/static/css/: style.css
(+9 files in other folders)
